--- a/resources/assets/sass/backend/skins/_skin-blue.scss
+++ b/resources/assets/sass/backend/skins/_skin-blue.scss
@@ -7,7 +7,7 @@
   //Navbar
   .main-header {
     .navbar {
-      @include navbar-variant($light-blue, #fff);
+      @include navbar-variant($other-blue, #fff);
       .sidebar-toggle {
         color: #fff;
         &:hover {
