--- a/resources/assets/sass/backend/_boxes.scss
+++ b/resources/assets/sass/backend/_boxes.scss
@@ -6,14 +6,14 @@
   position: relative;
   @include border-radius-same($box-border-radius);
   background: #ffffff;
-  border-top: 3px solid $box-default-border-top-color;
+  border-top: 0px solid $box-default-border-top-color;
   margin-bottom: 20px;
   width: 100%;
   box-shadow: $box-boxshadow;
 
   // Box color variations
   &.box-primary {
-    border-top-color: $light-blue;
+    border-top-color: $other-blue;
   }
   &.box-info {
     border-top-color: $aqua;
