--- a/resources/assets/sass/backend/_variables.scss
+++ b/resources/assets/sass/backend/_variables.scss
@@ -10,11 +10,13 @@ $boxed-layout-bg-image-path: "/images/boxed-bg.jpg" !default;
 //--------------------------------------------------------
 
 $light-blue: #3c8dbc;  //Primary
+$other-blue: #445878;
 $red:        #dd4b39;  //Danger
 $green:      #00a65a;  //Success
 $aqua:       #00c0ef;  //Info
 $yellow:     #f39c12;  //Warning
 $blue:       #0073b7;
+$greeny:	 #92CDCF;
 $navy:       #001F3F;
 $teal:       #39CCCC;
 $olive:      #3D9970;
@@ -37,17 +39,17 @@ $boxed-layout-max-width: 1024px;
 $screen-header-collapse: $screen-xs-max;
 
 //Link colors (Aka: <a> tags)
-$link-color:       $light-blue;
+$link-color:       $greeny;
 $link-hover-color: lighten($link-color, 15%);
 
 //Body background (Affects main content background only)
-$body-bg: #ecf0f5;
+$body-bg: #EEEFF7;
 
 //SIDEBAR SKINS
 //--------------------------------------------------------
 
 //Dark sidebar
-$sidebar-dark-bg:                  #222d32;
+$sidebar-dark-bg:                  #1C1D21;
 $sidebar-dark-hover-bg:            darken($sidebar-dark-bg, 2%);
 $sidebar-dark-color:               lighten($sidebar-dark-bg, 60%);
 $sidebar-dark-hover-color:         #fff;
@@ -71,14 +73,14 @@ $control-sidebar-width: $sidebar-width;
 
 //BOXES
 //--------------------------------------------------------
-$box-border-color:  #f4f4f4;
-$box-border-radius: 3px;
+$box-border-color:  transparent;
+$box-border-radius: 0px;
 $box-footer-bg:     #fff;
 $box-boxshadow:     0 1px 1px rgba(0, 0, 0, .1);
 $box-padding:       10px;
 
 //Box variants
-$box-default-border-top-color: #d2d6de;
+$box-default-border-top-color: transparent;
 
 //BUTTONS
 //--------------------------------------------------------
@@ -98,7 +100,7 @@ $input-radius: 0px;
 //--------------------------------------------------------
 
 //Border radius for non flat buttons
-$btn-border-radius: 3px;
+$btn-border-radius: 0px;
 
 //DIRECT CHAT
 //--------------------------------------------------------
