--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -10687,7 +10687,7 @@ table.text-center, table.text-center td, table.text-center th {
   .skin-blue-light .main-header .navbar .sidebar-toggle {
     color: #fff; }
     .skin-blue-light .main-header .navbar .sidebar-toggle:hover {
-      background-color: #367fa9; }
+      background-color: #3b4c68; }
   @media (max-width: 767px) {
     .skin-blue-light .main-header .navbar .dropdown-menu li.divider {
       background-color: rgba(255, 255, 255, 0.1); }
