--- a/resources/assets/sass/backend/skins/_skin-blue-light.scss
+++ b/resources/assets/sass/backend/skins/_skin-blue-light.scss
@@ -11,7 +11,7 @@
       .sidebar-toggle {
         color: #fff;
         &:hover {
-          background-color: darken($light-blue, 5%);
+          background-color: darken($other-blue, 5%);
         }
       }
       @media (max-width: $screen-header-collapse) {
