--- a/public/css/backend-rtl.css
+++ b/public/css/backend-rtl.css
@@ -10668,7 +10668,7 @@ table.text-center, table.text-center td, table.text-center th {
  * ----------
  */
 .skin-blue-light .main-header .navbar {
-  background-color: #3c8dbc; }
+  background-color: #445878; }
   .skin-blue-light .main-header .navbar .nav > li > a {
     color: #fff; }
   .skin-blue-light .main-header .navbar .nav > li > a:hover,
@@ -10694,17 +10694,17 @@ table.text-center, table.text-center td, table.text-center th {
     .skin-blue-light .main-header .navbar .dropdown-menu li a {
       color: #fff; }
       .skin-blue-light .main-header .navbar .dropdown-menu li a:hover {
-        background: #367fa9; } }
+        background: #3b4c68; } }
 
 .skin-blue-light .main-header .logo {
-  background-color: #3c8dbc;
+  background-color: #445878;
   color: #fff;
   border-bottom: 0px solid transparent; }
   .skin-blue-light .main-header .logo:hover {
-    background-color: #3b8ab8; }
+    background-color: #425675; }
 
 .skin-blue-light .main-header li.user-header {
-  background-color: #3c8dbc; }
+  background-color: #445878; }
 
 .skin-blue-light .content-header {
   background: transparent; }
@@ -10734,7 +10734,7 @@ table.text-center, table.text-center td, table.text-center th {
     color: #000;
     background: #f4f4f5; }
   .skin-blue-light .sidebar-menu > li.active {
-    border-right-color: #3c8dbc; }
+    border-right-color: #445878; }
     .skin-blue-light .sidebar-menu > li.active > a {
       font-weight: 600; }
   .skin-blue-light .sidebar-menu > li > .treeview-menu {
@@ -10793,11 +10793,11 @@ table.text-center, table.text-center td, table.text-center th {
   border-top-color: #d2d6de; }
 
 .skin-blue.layout-top-nav .main-header > .logo {
-  background-color: #3c8dbc;
+  background-color: #445878;
   color: #fff;
   border-bottom: 0px solid transparent; }
   .skin-blue.layout-top-nav .main-header > .logo:hover {
-    background-color: #3b8ab8; }
+    background-color: #425675; }
 
 /*
  * Skin: Black
