--- a/resources/assets/sass/backend/skins/_skin-blue-light.scss
+++ b/resources/assets/sass/backend/skins/_skin-blue-light.scss
@@ -7,7 +7,7 @@
   //Navbar
   .main-header {
     .navbar {
-      @include navbar-variant($light-blue, #fff);
+      @include navbar-variant($other-blue, #fff);
       .sidebar-toggle {
         color: #fff;
         &:hover {
@@ -23,7 +23,7 @@
             a {
               color: #fff;
               &:hover {
-                background: darken($light-blue, 5%);
+                background: darken($other-blue, 5%);
               }
             }
           }
@@ -32,11 +32,11 @@
     }
     //Logo
     .logo {
-      @include logo-variant($light-blue);
+      @include logo-variant($other-blue);
     }
 
     li.user-header {
-      background-color: $light-blue;
+      background-color: $other-blue;
     }
   }
 
@@ -46,12 +46,12 @@
   }
 
   //Create the sidebar skin
-  @include skin-light-sidebar($light-blue);
+  @include skin-light-sidebar($other-blue);
   .main-footer {
     border-top-color: $gray;
   }
 }
 
 .skin-blue.layout-top-nav .main-header > .logo {
-  @include logo-variant($light-blue);
+  @include logo-variant($other-blue);
 }
