--- a/resources/assets/sass/backend/_forms.scss
+++ b/resources/assets/sass/backend/_forms.scss
@@ -7,7 +7,7 @@
   box-shadow: none;
   border-color: $gray;
   &:focus {
-    border-color: $light-blue !important;
+    border-color: $other-blue !important;
     box-shadow: none;
   }
   &::-moz-placeholder {
