--- a/resources/assets/sass/backend/_miscellaneous.scss
+++ b/resources/assets/sass/backend/_miscellaneous.scss
@@ -90,7 +90,7 @@
   background-color: $blue !important;
 }
 .bg-light-blue {
-  background-color: $light-blue !important;
+  background-color: $other-blue !important;
 }
 .bg-green {
   background-color: $green !important;
@@ -141,7 +141,7 @@
   background-color: darken($blue , 10%)!important;
 }
 .bg-light-blue-active {
-  background-color: darken($light-blue , 6%)!important;
+  background-color: darken($other-blue , 6%)!important;
 }
 .bg-green-active {
   background-color: darken($green , 5%)!important;
@@ -193,7 +193,7 @@
   color: $black!important;
 }
 .text-light-blue {
-  color: $light-blue !important;
+  color: $other-blue !important;
 }
 .text-green {
   color: $green !important;
@@ -284,7 +284,7 @@
 }
 
 .bg-light-blue-gradient {
-  @include gradient($light-blue, $light-blue, lighten($light-blue, 12%));
+  @include gradient($other-blue, $other-blue, lighten($other-blue, 12%));
   color: #fff;
 }
 
