--- a/resources/assets/sass/backend/skins/_skin-blue.scss
+++ b/resources/assets/sass/backend/skins/_skin-blue.scss
@@ -11,7 +11,7 @@
       .sidebar-toggle {
         color: #fff;
         &:hover {
-          background-color: darken($light-blue, 5%);
+          background-color: darken($other-blue, 5%);
         }
       }
       @media (max-width: $screen-header-collapse) {
@@ -23,7 +23,7 @@
             a {
               color: #fff;
               &:hover {
-                background: darken($light-blue, 5%);
+                background: darken($other-blue, 5%);
               }
             }
           }
@@ -32,11 +32,11 @@
     }
     //Logo
     .logo {
-      @include logo-variant(darken($light-blue, 5%));
+      @include logo-variant(darken($other-blue, 5%));
     }
 
     li.user-header {
-      background-color: $light-blue;
+      background-color: $other-blue;
     }
   }
 
@@ -46,9 +46,9 @@
   }
 
   //Create the sidebar skin
-  @include skin-dark-sidebar($light-blue);
+  @include skin-dark-sidebar($other-blue);
 }
 
 .skin-blue.layout-top-nav .main-header > .logo {
-  @include logo-variant($light-blue);
+  @include logo-variant($other-blue);
 }
