--- a/resources/assets/sass/backend/variable-overrides.scss
+++ b/resources/assets/sass/backend/variable-overrides.scss
@@ -1,2 +1,4 @@
 $fa-font-path: "../fonts/font-awesome";
-$font-family-sans-serif:  Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-sans-serif:  'Merriweather Sans', sans-serif;
+$font-family-serif: 'Merriweather', serif;
+$font-family-cursive: 'Yeseva One', cursive;
