font pairing change

--- a/resources/assets/sass/backend/variable-overrides.scss
+++ b/resources/assets/sass/backend/variable-overrides.scss
@@ -1,4 +1,4 @@
 $fa-font-path: "../fonts/font-awesome";
-$font-family-sans-serif:  'Merriweather Sans', sans-serif;
-$font-family-serif: 'Merriweather', serif;
-$font-family-cursive: 'Yeseva One', cursive;
+$font-family-sans-serif:  font-family: 'Open Sans', sans-serif;
+$font-family-serif: font-family: 'Gentium Basic', serif;
+$font-family-cursive: font-family: 'Open Sans', sans-serif;
