--- a/public/css/backend-rtl.css
+++ b/public/css/backend-rtl.css
@@ -9825,7 +9825,7 @@ $-webkit-keyframes flipInX {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   border-radius: 0px; }
   .nav-tabs-custom > .nav-tabs {
-    margin: 0;
+    /*    margin: 0;*/
     border-bottom-color: #f4f4f4;
     border-top-left-radius: 0px;
     border-top-right-radius: 0px; }
@@ -12006,6 +12006,14 @@ table.text-center, table.text-center td, table.text-center th {
 .logged-in-as {
   margin: 0;
   border-radius: 0; }
+
+.dz-clickable {
+  width: 100%;
+  border: 1px dotted black;
+  min-height: 105px;
+  margin-bottom: 20px;
+  padding: 10px;
+  text-align: center; }
 
 .mt-0 {
   margin-top: 0px !important; }
