--- a/resources/assets/sass/backend/_navs.scss
+++ b/resources/assets/sass/backend/_navs.scss
@@ -14,6 +14,7 @@
 
 /* NAV PILLS */
 .nav-pills {
+  border-bottom: 1px solid #f4f4f4;
   > li > a {
     @include border-radius-same(0);
     border-top: 3px solid transparent;
