--- a/resources/assets/sass/backend/_variables.scss
+++ b/resources/assets/sass/backend/_variables.scss
@@ -39,7 +39,7 @@ $boxed-layout-max-width: 1024px;
 $screen-header-collapse: $screen-xs-max;
 
 //Link colors (Aka: <a> tags)
-$link-color:       $greeny;
+$link-color:       #445878;
 $link-hover-color: lighten($link-color, 15%);
 
 //Body background (Affects main content background only)
