--- a/resources/assets/sass/frontend/app.scss
+++ b/resources/assets/sass/frontend/app.scss
@@ -9,3 +9,11 @@
   margin:0;
   border-radius:0;
 }
+
+.table-no-bordered {
+	border: none !important;
+}
+
+.select2-container {
+	width: 100% !important;
+}
