--- a/public/css/bootstrap-table.css
+++ b/public/css/bootstrap-table.css
@@ -6,7 +6,7 @@
 
 .bootstrap-table .table {
     margin-bottom: 0 !important;
-    border-bottom: 1px solid #dddddd;
+/*    border-bottom: 1px solid #dddddd;*/
     border-collapse: collapse !important;
     border-radius: 1px;
 }
@@ -39,7 +39,8 @@
 }
 
 .fixed-table-container.table-no-bordered {
-    border: 1px solid transparent;
+/*    border: 1px solid transparent;*/
+    border: none;
 }
 
 .fixed-table-footer,
@@ -266,7 +267,7 @@
 
 .bootstrap-table .table > thead > tr > th {
     vertical-align: bottom;
-    border-bottom: 1px solid #ddd;
+/*    border-bottom: 1px solid #ddd;*/
 }
 
 /* support bootstrap 3 */
