--- a/public/css/bootstrap-table.css
+++ b/public/css/bootstrap-table.css
@@ -267,7 +267,7 @@
 
 .bootstrap-table .table > thead > tr > th {
     vertical-align: bottom;
-/*    border-bottom: 1px solid #ddd;*/
+    border-bottom: 1px solid #ddd;
 }
 
 /* support bootstrap 3 */
