--- a/public/css/bootstrap-table.css
+++ b/public/css/bootstrap-table.css
@@ -53,9 +53,11 @@
 }
 
 .fixed-table-body {
+    /*
     overflow-x: auto;
     overflow-y: auto;
     height: 100%;
+*/
 }
 
 .fixed-table-container table {
