--- a/resources/assets/sass/backend/_variables.scss
+++ b/resources/assets/sass/backend/_variables.scss
@@ -42,6 +42,7 @@ $screen-header-collapse: $screen-xs-max;
 $link-color:       #445878;
 $link-hover-color: lighten($link-color, 15%);
 
+$hr-border: #dddddd;
 //Body background (Affects main content background only)
 $body-bg: #EEEFF7;
 
