update response form

--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -5,6 +5,19 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+
+
+/* IMPLEMENT WHEN READY */
+
+.control .error {
+    position: absolute;
+    right: 25px;
+    top: 5px;
+    padding: 10px;
+    color: red;
+}
+
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
