--- a/public/css/bulma.css
+++ b/public/css/bulma.css
@@ -2057,7 +2057,7 @@ input[type="submit"].button {
     vertical-align: middle; }
 
 .title {
-  color: #363636;
+  color: #f7931d;
   font-size: 2rem;
   font-weight: 300;
   line-height: 1.125; }
@@ -2081,7 +2081,7 @@ input[type="submit"].button {
     font-size: 1rem; }
 
 .subtitle {
-  color: #4a4a4a;
+  color: #302f48;
   font-size: 1.25rem;
   font-weight: 300;
   line-height: 1.25; }
