--- a/public/css/queso.css
+++ b/public/css/queso.css
@@ -18,3 +18,15 @@
 .dark-section {
   background-color: #696883 !important;
 }
+
+.rangeslider__fill {
+  background: #942d80 !important;
+}
+
+.rangeslider__handle {
+  border: none !important;
+  background-image: none !important;
+  box-shadow: none !important;
+  border-radius: none !important;
+  
+}
