--- a/public/css/queso.css
+++ b/public/css/queso.css
@@ -24,7 +24,7 @@
 }
 
 .rangeslider__handle {
-  border: none !important;
+  border: 1px solid #302f48 !important;
   background-image: none !important;
   box-shadow: none !important;
 }
