--- a/public/css/queso.css
+++ b/public/css/queso.css
@@ -32,3 +32,11 @@
 .rangeslider__handle:after {
   background-image: none !important;
 }
+.message {
+    position: absolute;
+    z-index: 9999;
+    width: 500px;
+    top: 10px;
+    right: 10px;
+    box-shadow: 5px 5px 5px #302f48;
+}
