use agenda class on all dahboard breaks

--- a/public/css/queso.css
+++ b/public/css/queso.css
@@ -45,7 +45,7 @@
   color: #ffffff;
 }
 .agenda {
-    border-bottom: 1px solid #302f48;
+    border-bottom: 1px solid #696883;
     padding-bottom: 5px;
     margin-bottom: 10px;
 }
