add announcement class

--- a/public/css/queso.css
+++ b/public/css/queso.css
@@ -44,18 +44,18 @@
 .is-info .label, .is-primary .label {
   color: #ffffff;
 }
-.agenda {
+.agenda, .announcement {
     border-bottom: 1px solid #696883;
     padding-bottom: 5px;
     margin-bottom: 10px;
 }
 
-.course {
+.course, {
   border-bottom: 1px solid #696883;
   padding-top: 10px;
   padding-bottom: 20px;
 }
 
-.course:last-child {
+.course:last-child, .announcement:last-child {
   border: none;
 }
