--- a/public/css/queso.css
+++ b/public/css/queso.css
@@ -48,6 +48,8 @@
     border-bottom: 1px solid #696883;
     padding-bottom: 5px;
     margin-bottom: 10px;
+    margin-top: 20px;
+    opacity: .7;
 }
 
 .course, {
